syntax = "proto3";

option java_multiple_files = true;
option java_package = "hengda.pitchfork";
option java_outer_classname = "UserProto";

package user;

service User {
    rpc commonUserSignIn(UserRequest) returns (UserReply) {}
    rpc superUserSignIn(UserRequest) returns (UserReply) {}
    rpc list(UserRequest) returns (UserReply) {}
    rpc save(UserRequest) returns (UserReply) {}
    rpc get(UserRequest) returns (UserReply) {}
    rpc update(UserRequest) returns (UserReply) {}
    rpc remove(UserRequest) returns (UserReply) {}
    rpc saveSignature(UserRequest) returns (UserReply) {}
}

message UserRequest { string data = 1; }

message UserReply { string data = 1; }
